--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
 <body>
   <div class="container">
     <div class="digit">
-      <span class="active"></span>
-      <span class="active"></span>
-      <span class="active"></span>
-      <span class="active"></span>
-      <span class="active"></span>
-      <span class="active"></span>
-      <span class="active"></span>
+      <span class="top1"></span>
+      <span class="top-right1"></span>
+      <span class="bottom-right1"></span>
+      <span class="bottom1"></span>
+      <span class="bottom-left1"></span>
+      <span class="top-left1"></span>
+      <span class="middle1"></span>
     </div>
     <div class="digit">
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
+      <span class="top2"></span>
+      <span class="top-right2"></span>
+      <span class="bottom-right2"></span>
+      <span class="bottom2"></span>
+      <span class="bottom-left2"></span>
+      <span class="top-left2"></span>
+      <span class="middle2"></span>
     </div>
     <div class="digit">
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
+      <span class="top3"></span>
+      <span class="top-right3"></span>
+      <span class="bottom-right3"></span>
+      <span class="bottom3"></span>
+      <span class="bottom-left3"></span>
+      <span class="top-left3"></span>
+      <span class="middle3"></span>
     </div>
     <div class="digit">
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
-      <span class=""></span>
+      <span class="top4"></span>
+      <span class="top-right4"></span>
+      <span class="bottom-right4"></span>
+      <span class="bottom4"></span>
+      <span class="bottom-left4"></span>
+      <span class="top-left4"></span>
+      <span class="middle4"></span>
     </div>
   </div>
   
