--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <span class="hours" id="hours">00</span>
-    <span id="minutes">00</span>
-    <span id="seconds">00</span>
+    <span id="hours"></span>
+    <span id="minutes"></span>
+    <span id="seconds"></span>
   </div>
   
 </body>
