--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
 </head>
 <body>
   <div class="container">
+    <h1>Digital Clock</h1>
+    <label id="timezone-label" for="timezone-menu">Set timezone</label>
+    <select name="timezone-menu" id="timezone-menu">
+      <option value="0">local timezone</option>
+      <option value="0">UTC +0</option>
+      <option value="1">+1</option>
+      <option value="2">+2</option>
+      <option value="3">+3</option>
+      <option value="4">+4</option>
+      <option value="5">+5</option>
+      <option value="6">+6</option>
+      <option value="7">+7</option>
+      <option value="8">+8</option>
+      <option value="9">+9</option>
+      <option value="10">+10</option>
+      <option value="11">+11</option>
+      <option value="-12">-12</option>
+      <option value="-11">-11</option>
+      <option value="-10">-10</option>
+      <option value="-9">-9</option>
+      <option value="-8">-8</option>
+      <option value="-7">-7</option>
+      <option value="-6">-6</option>
+      <option value="-5">-5</option>
+      <option value="-4">-4</option>
+      <option value="-3">-3</option>
+      <option value="-2">-2</option>
+      <option value="-1">-1</option>
+    </select>
+  </div>
+  <div class="clock">
     <span id="hours"></span>
     <span id="minutes"></span>
     <span id="seconds"></span>
